--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   </div>
   </section>
   <section>
-    <div class="container mt-5 ps-5 bg-primary">
+    <div class="container mt-5 mb-5 ps-5 bg-primary">
       <div class="row">
         <div class="col-lg-7 col-md-12 col-sm-12 p-5 text-light d-flex align-items-start flex-column">
           <h3>Ready to join?</h3>
@@ -249,6 +249,41 @@
       </div>
     </div>
   </section>
+  
+  <div class=" top-margin w-75 bg-dark bg-opacity-10 shadow-lg px-2 py-1 mx-auto d-none d-lg-block">
+            <h1 class="mt-2 mb-5 fw-bolder fs-1 text-center">
+                Trusted by over 800+ companies
+            </h1>
+            <div class="brand py-2 mt-5 d-flex justify-content-between align-items-center" >
+                <img src="images/company/company-1.png" alt="" />
+                <img src="images/company/company-2.png" alt="" />
+                <img src="images/company/company-3.png" alt="" />
+                <img src="images/company/company-4.png" alt="" />
+                <img src="images/company/company-5.png" alt="" />
+                <img src="images/company/company-6.png" alt="" />
+            </div>
+        </div>
+   <!-- footer starts  -->
+   <footer id="about" class="top-margin container-fluid bg-dark fw-semibold text-light py-5 d-flex flex-column justify-content-center align-items-center mt-5">
+   <h1 class="fs-1 fw-bolder text-secondary">Education</h1>
+   <p class="m-0 text-muted">
+       Office 41, Zawaya Buildin, Ghala Muscat
+   </p>
+   <p class="text-muted">Sultanate of Oman</p>
+   <p class="text-muted">
+       Privacy Ploicy <span class="mx-2">|</span> Terms of use
+   </p>
+   <div class="social-icons">
+       <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fs-3 me-2 text-muted"></i>
+       </a>
+       <a href="https://www.linkedin.com"target="_blank"><i class="fab fa-linkedin fs-3 me-2 text-muted"></i>
+      </a>
+       <a href="https://twitter.com/?lang=en" target="_blank"><i class="fab fa-twitter fs-3 me-2 text-muted"></i>
+      </a>
+      
+       </a>
+   </div>
+</footer>
 
 
     
