--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education Site</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/9b8c47bde4.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="container">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand p-5" href="#">Pro Edu</a>
+            <a class="navbar-brand p-5" href="#">Edu Planner</a>
             <button
                 class="navbar-toggler"
                 type="button"
@@ -95,7 +96,7 @@
             <div class="carousel-inner position-relative rounded">
                 <div class="carousel-item active">
                     <div class="row">
-                        <div class="class-col-lg-12 col-md-12 col-sm-12">
+                        <div class="col col-lg-12 col-md-12 col-sm-12">
                             <img
                                 src="images/cover/cover-1.png"
                                 class="
@@ -122,10 +123,7 @@
                                     Get Started Digital Learning
                                 </h1>
                                 <p>
-                                    It is a long established fact that a
-                                    reader will be distracted by the
-                                    readable content of a page when
-                                    looking at its layout
+                                  Empower every student with digital literacy, problem-solving and programming skills through a comprehensive, customizable, easy to implement solution
                                 </p>
                                 <div class="slider-btn">
                                     <button
@@ -171,10 +169,7 @@
                                     Get Started Digital Learning
                                 </h1>
                                 <p>
-                                    It is a long established fact that a
-                                    reader will be distracted by the
-                                    readable content of a page when
-                                    looking at its layout
+                                  Empower every student with digital literacy, problem-solving and programming skills through a comprehensive, customizable, easy to implement solution
                                 </p>
                                 <div class="slider-btn">
                                     <button
@@ -220,10 +215,7 @@
                                     Get Started Digital Learning
                                 </h1>
                                 <p>
-                                    It is a long established fact that a
-                                    reader will be distracted by the
-                                    readable content of a page when
-                                    looking at its layout
+                                  Empower every student with digital literacy, problem-solving and programming skills through a comprehensive, customizable, easy to implement solution
                                 </p>
                                 <div class="slider-btn">
                                     <button
@@ -282,10 +274,7 @@
     >
         <h1 class="m-5">Discover Our Popular Courses</h1>
         <p>
-            It is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at
-            its layout.
-        </p>
+          Empower every student with digital literacy, problem-solving and programming skills through a comprehensive, customizable, easy to implement solution
     </div>
 </section>
 <section>
@@ -313,7 +302,7 @@
                     Some quick example text to build on the card title
                     and make up the bulk of the card.
                 </p>
-                <p>Price :20$</p>
+                <p class="text-primary">Price :20$</p>
             </div>
 
             <div class="col-lg-2 col-md-6 col-sm-6">
@@ -337,7 +326,7 @@
                     Some quick example text to build on the card title
                     and make up the bulk of the card.
                 </p>
-                <p>Price :20$</p>
+                <p class="text-primary">Price :20$</p>
             </div>
         </div>
         <div class="row">
@@ -363,7 +352,7 @@
                     Some quick example text to build on the card title
                     and make up the bulk of the card..
                 </p>
-                <p>Price :20$</p>
+                <p class="text-primary">Price :20$</p>
             </div>
 
             <div class="col-lg-2 col-md-6 col-sm-6">
@@ -387,7 +376,7 @@
                     Some quick example text to build on the card title
                     and make up the bulk of the card.
                 </p>
-                <p>Price :20$</p>
+                <p class="text-primary">Price :20$</p>
             </div>
         </div>
         <div class="row">
@@ -413,10 +402,10 @@
                     Some quick example text to build on the card title
                     and make up the bulk of the card.
                 </p>
-                <p>Price :20$</p>
+                <p class="text-primary">Price :20$</p>
             </div>
 
-            <div class="col-lg-2 col-md-6 col-sm-6 pt-10">
+            <div class="col-lg-2 col-md-6 col-sm-12 pt-10">
                 <img
                     class="img-fluid"
                     src="images/course/course-6.png"
@@ -450,6 +439,9 @@
         </div>
     </div>
 </section>
+
+
+<!-- Ready to join section -->
 <section>
     <div class="container mt-5 mb-5 ps-5 bg-primary">
         <div class="row">
@@ -556,6 +548,7 @@
     </div>
 </section>
 
+
 <!--Frequently Asked Questions starts-->
 <div class="mt-5 container w-75 p-0">
     <h2 class="text-center fw-bold fs-1">Frequently Asked Questions</h2>
@@ -591,7 +584,11 @@
                     aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample"
                 >
-                    <div class="accordion-body fw-bold text-dark"></div>
+                    <div class="accordion-body fw-bold text-dark">
+                      <p>In CSS, the term "box model" is used when talking about design and layout.
+
+                        The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item mb-2 shadow-sm">
@@ -618,7 +615,9 @@
                     aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample"
                 >
-                    <div class="accordion-body text-dark fw-bold"></div>
+                    <div class="accordion-body text-dark fw-bold">
+                      <p>CSS Grids helps you create the outer layout of the webpage. You can build complex as well responsive design with this. This is why it is called ‘layout first’. Flexbox mostly helps align content & move blocks. CSS grids are for 2D layouts. It works with both rows and columns. Flexbox works better in one dimension only (either rows OR columns).</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item mb-2 shadow-sm">
@@ -647,7 +646,9 @@
                     aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample"
                 >
-                    <div class="accordion-body fw-bold text-dark"></div>
+                    <div class="accordion-body fw-bold text-dark">
+                      <p>There are several differences between Tailwind CSS and Bootstrap CSS. Both frameworks are open-source and are designed for utility and responsive mobile web development. Bootstrap provides HTML, CSS, and JavaScript design templates for a variety of interface components. They also use the same set of tools for building websites. To make your design process easier, Tailwind CSS has a utility-first framework. You can use it like regular CSS, but it includes a number of new features.</p>
+                    </div>
                 </div>
             </div>
             <div class="accordion-item mb-2 shadow-sm">
@@ -666,7 +667,7 @@
                         aria-expanded="false"
                         aria-controls="collapseFour"
                     >
-                        Q4: What is semantig tags? Gime some examples
+                        Q4: What is semantig tags? Give some examples
                     </button>
                 </h1>
                 <div
@@ -675,12 +676,16 @@
                     aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample"
                 >
-                    <div class="accordion-body fw-bold text-dark"></div>
+                    <div class="accordion-body fw-bold text-dark">
+                      <p>A semantic tag in HTML is a tag whose name clearly describes its purpose and content. HTML5 introduced several new semantic tags. These include main, aside, section, article tag and others</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 
 <!-- trusted section starts  -->
 <section
@@ -735,6 +740,7 @@
     </div> -->
 </section>
 
+
 <!-- footer starts  -->
 <footer
     class="
@@ -749,20 +755,20 @@
         align-items-center
     "
 >
-    <h1 class="fs-1 fw-bolder">Pro Edu</h1>
+    <h1 class="fs-1 fw-bolder">Edu Planner</h1>
     <p class="m-0">Office 41, Zawaya Buildin, Ghala Muscat</p>
     <p>Sultanate of Oman</p>
     <p>Privacy Ploicy <span class="mx-2">|</span> Terms of use</p>
     <div class="social-icons">
-        <a
+        <a 
             href="https://www.facebook.com/sheemajahan.dristy.1"
             target="_blank"
             ><i class="fab fa-facebook-square fs-3 me-2 text-muted"></i
         ></a>
-        <a href="" target="_blank"
+        <a href="https://www.linkedin.com/" target="_blank"
             ><i class="fab fa-linkedin fs-3 me-2 text-muted"></i
         ></a>
-        <a href="" target="_blank"
+        <a href="https://twitter.com/" target="_blank"
             ><i class="fab fa-twitter fs-3 me-2 text-muted"></i
         ></a>
         <a href="https://github.com/dristygithub" target="_blank"
@@ -771,11 +777,6 @@
     </div>
 </footer>
 
-
-  
-
-
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
